[package]
name = "harled_core"
version = "0.3.0"
authors = ["axel paulander <axel.paulander@gmail.com>"]
edition = "2021"
description = "Core traits and types of the harled crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/strosel/harled"
readme = "../readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { workspace = true }
quote = "1.0"
strum = { version = "0.24", features = ["derive"] }
