[package]
name = "harled_macro"
version = "0.3.0"
authors = ["axel paulander <axel.paulander@gmail.com>"]
edition = "2021"
description = "Macros for the harled crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/strosel/harled"
readme = "../readme.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
harled_core = { workspace = true }
syn = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0"
